# CMake-CPlus

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
.github/workflows/: cmake-multi-platform.yml
Header/: std_unique_ptr.h  virtual_destructor.h
IPC/: ipc_sharememory_child  ipc_sharememory_parent
SourcesFile/: ipc_sharememory_child.cpp  ipc_sharememory_parent.cpp  std_unique_ptr.cpp  virtual_destructor.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
